<resources>
    <string name="app_name">RecipeApp</string>
    <string name="onboard_subhead">100K+ Premium Recipe</string>
    <string name="onboard_button">Start Cooking</string>
    <string name="onboard_tagline">Simple way to find Tasty recipe</string>
    <string name="onboard_heading">Get Cooking</string>
    <string name="login_hello_heading">Hello,</string>
    <string name="login_welcome_back_heading">Welcome Back!</string>
    <string name="email_heading">Email</string>
    <string name="email_hint">Enter email</string>
    <string name="password_heading">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_sign_in_button">Sign in</string>
    <string name="sign_in_option_heading">Or Sign in With</string>
    <string name="login_go_to_sign_up">Don\'t have an account? Sign up</string>
    <string name="signup_create_account_heading">Create an account</string>
    <string name="signup_subheading">Let’s help you set up your account,\n it won’t take long.</string>
    <string name="name_heading">Name</string>
    <string name="name_hint">Enter Name</string>
    <string name="confirm_password_heading">Confirm Password</string>
    <string name="confirm_password_hint">Retype Password</string>
    <string name="checkbox_accept_terms_conditions"><![CDATA[Accept terms & Condition]]></string>
    <string name="sign_up_button">Sign Up</string>
    <string name="signup_go_to_login">Already a member? Sign In</string>
    <string name="loading">Loading</string>
    <string name="home_screen_heading">Hello Jega</string>
    <string name="home_screen_subheading">What are you cooking today?</string>
    <string name="content_desc_home_avatar">Avatar image</string>
    <string name="home_new_recipes_heading">New Recipes</string>
    <string name="sample_cuisine_name">Indian</string>
    <string name="sample_recipe_name">Classic Greek Salad</string>
    <string name="head_time">Time</string>
    <string name="sample_time_value">15 mins</string>
    <string name="content_desc_recipe_image">Recipe Image</string>
    <string name="sample_rating_value">4.5</string>
    <string name="content_desc_recipe_rating">Rating</string>
    <string name="content_desc_save_recipe">Save recipe</string>
    <string name="sample_new_recipe_name">Steak with tomato sauce and bulgur rice.</string>
    <string name="sample_person_name">By James Milner</string>
    <string name="sample_content_desc">Content description</string>
    <string name="failed_to_load_recipes">Failed to load recipes</string>
    <string name="recipe_fetch_try_again">Try again</string>
    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_save_title">Save</string>
    <string name="bottom_nav_notification_title">Notification</string>
    <string name="bottom_nav_profile_title">Profile</string>
    <string name="implementation_in_progress">In progress</string>
    <string name="sample_chef_name">By Chef Johns</string>
    <string name="hint_search_recipe">Search recipe</string>
    <string name="recent_search">Recent Search</string>
    <string name="sample_searched_count">255 results</string>
    <string name="search_result">Search Result</string>
    <string name="search_result_count">%d results</string>
    <string name="sorry_no_recipe_found">Sorry! No recipe found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_search">Filter search</string>
    <string name="filter_search_diet_type">Diet type</string>
    <string name="filter_search_meal_type">Meal type</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non-veg</string>
    <string name="main_course">Main course</string>
    <string name="breakfast">Breakfast</string>
    <string name="side_dish">Side dish</string>
    <string name="apply_filter">Apply filter</string>
</resources>