<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/bottom_nav_home_title"
        android:icon="@drawable/ic_home" />
    <item
        android:id="@+id/saveFragment"
        android:title="@string/bottom_nav_save_title"
        android:icon="@drawable/ic_save" />
    <item
        android:id="@+id/fab"
        android:title=""
        android:enabled="false" />
    <item
        android:id="@+id/notificationsFragment"
        android:title="@string/bottom_nav_notification_title"
        android:icon="@drawable/ic_notification" />
    <item
        android:id="@+id/profileFragment"
        android:title="@string/bottom_nav_profile_title"
        android:icon="@drawable/ic_profile" />
</menu>