<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="231dp">
    <View
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="@drawable/bg_recipe_card"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/imgRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_desc_recipe_image"
                android:src="@drawable/sample_recipe"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />
            <LinearLayout
                android:layout_width="45dp"
                android:layout_height="23dp"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/bg_rating_container">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/content_desc_recipe_rating"
                    android:src="@drawable/rating_star" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sample_rating_value"
                    android:textSize="11sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
        </FrameLayout>
        <TextView
            android:id="@+id/tvRecipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/sample_recipe_name"
            android:textAlignment="center"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/poppins_bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/head_time"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/recipeCardTextGray"
                    android:textSize="11sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_time_value"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="11sp" />
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/content_desc_save_recipe"
                android:src="@drawable/save_recipe"
                android:layout_gravity="bottom" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>