<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="251dp"
        android:layout_height="127dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_gravity="bottom"
            app:cardCornerRadius="10dp"
            android:layout_marginEnd="15dp"
            android:elevation="20dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/tvRecipeName"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_new_recipe_name"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:fontFamily="@font/poppins_bold" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/new_recipe_rating"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/sample_content_desc"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sample_person"
                        android:contentDescription="@string/sample_content_desc"/>
                    <TextView
                        android:id="@+id/tvSourceName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_person_name"
                        android:textSize="11sp"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_gravity="center"
                        android:textColor="@color/recipeCardTextGray" />
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                    <ImageView
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:src="@drawable/timer"
                        android:layout_gravity="center"
                        android:contentDescription="@string/sample_content_desc"/>
                    <TextView
                        android:id="@+id/tvPreparationTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_time_value"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="11sp"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/recipeCardTextGray" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="top|end"
            android:layout_marginEnd="25dp"
            android:elevation="0dp"
            app:cardCornerRadius="40dp">
            <ImageView
                android:id="@+id/imgRecipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/sample_recipe"
                android:scaleType="centerCrop"
                android:elevation="1dp"
                android:contentDescription="@string/sample_content_desc"/>
        </androidx.cardview.widget.CardView>
        <View
            android:id="@+id/viewLoadingShimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:background="@color/colorSecondary"
            android:elevation="2dp"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
